@@ -9,6 +9,7 @@
 - Fix `var(...)` call in `Switch` code not accepting `param` value without parentheses.
 - Fix default purchase sprite for auto-articulated trains.
 
+- Add `id_index_path` parameter to `BaseNewGRF` constructor and `reserve_ids` and `resolve_id` methods to manage auto-assigned (string) IDs.
 - Use `AlternativeSprites` instead of sprite tuples.
 - Add Action0 properties for road types.
 - Add `NewGRF.add_railtype` to add railtypes one-by-one.
